<resources>
    <string name="app_name">Ellinika</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Login">log in</string>
    <string name="Signup">sign up</string>
    <string name="error_no_such_user">Maybe try to sign up instead.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="error_user_already">User already exists.</string>
    <string name="error_creating">Could not add new user.</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="textview">TextView</string>
    <string name="create_group">new group (teacher)</string>
    <string name="group_name">Group name: </string>
    <string name="group_name_in">enter the group name</string>
    <string name="set_name_group_error">the group must have a name!</string>
    <string name="create_group_error">Could not create group.</string>
    <string name="new_group_text">new group</string>
    <string name="join_group_error">Could not join group.</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="create_lesson">create lesson</string>
    <string name="create_lesson_error">Only a teacher can create a lesson.</string>
    <string name="join_group_student">join a group (student)</string>
    <string name="join_group_teacher">join a group (teacher)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_string">ok</string>
    <string name="create_lesson_error_text">lesson not found.</string>
    <string name="modify_lesson_button_text">modify</string>
    <string name="create_lesson_title_text">lesson title</string>
    <string name="create_lesson_text_hint">write the lesson text here</string>
    <string name="create_lesson_extras_text">enter additional information</string>
    <string name="groups_list_title_string">Your groups:</string>
    <string name="create_group_exists_error">Group already exists</string>
    <string name="join_group_not_exist_error">group does not exist</string>
    <string name="logout">logout</string>
    <string name="cancel">cancel</string>
    <string name="create_lesson_exercise_question">Type the question here</string>
    <string name="create_lesson_exercise_answer">And the answer here</string>
    <string name="error_create_lesson_empty_title">The title can\'t be empty</string>
</resources>
