<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.lamprini.ellinika.GroupsRolesActivity">

    <TextView
        android:id="@+id/uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="italic"
        android:padding="10sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/groups_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/groups_list_title_string"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@id/uid"/>

    <ListView
        android:id="@+id/groups_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/groups_list_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/groups_list">
        <Button
            android:id="@+id/create_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/create_group"
            android:padding="20sp"
            android:onClick="createGroup" />

        <Button
            android:id="@+id/join_group_s_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/join_group_student"
            android:padding="20sp"
            android:onClick="joinGroupAsStudent"/>

        <Button
            android:id="@+id/join_group_t_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/join_group_teacher"
            android:padding="20sp"
            android:onClick="joinGroupAsTeacher"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/logout"
            android:onClick="logout" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
