<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lamprini.ellinika.NewGroupActivity">

    <LinearLayout
        android:id="@+id/group_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10sp">

    <TextView
        android:id="@+id/create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/group_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/set_name_group"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/group_name_in"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@id/create_group" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/group_name_layout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_group_text"
        android:onClick="createOrJoinGroup"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"/>

    </LinearLayout>

    <EditText
        android:id="@+id/create_group_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="text"/>

</android.support.constraint.ConstraintLayout>
